--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --standard-spacing: 4rem;
+  --section-spacing: 6rem; /* Added new variable for consistent section spacing */
+}
+
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 0;
+}
+
+.mb-standard {
+  margin-bottom: var(--standard-spacing);
 }
