--- a/app/(styles)/ScrollSnap.module.css
+++ b/app/(styles)/ScrollSnap.module.css
@@ -1,29 +1,19 @@
-/* app/styles/ScrollSnap.module.css */
-
 .container {
-    /* Enable scroll snapping */
-    scroll-snap-type: y mandatory;
-    /* Ensure the container takes up the full viewport height */
-    height: 100vh;
-    /* Allow vertical scrolling */
-    overflow-y: scroll;
-    /* Hide scrollbar for cleaner look (optional) */
-    scrollbar-width: none; /* Firefox */
+    scroll-snap-type: y mandatory; /* Enable scroll snapping */
+    height: 100vh; /* Ensure the container takes up the full viewport height */
+    overflow-y: scroll; /* Allow vertical scrolling */
+    scrollbar-width: none; /* Hide scrollbar for cleaner look (optional) */
     -ms-overflow-style: none; /* Internet Explorer and Edge */
   }
   
-  /* Hide scrollbar for Chrome, Safari and Opera */
   .container::-webkit-scrollbar {
-    display: none;
+    display: none; /* Hide scrollbar for Chrome, Safari and Opera */
   }
   
   .section {
-    /* Ensure each section takes up the full height of the viewport */
-    height: 100vh;
-    /* Enable snapping for this element */
-    scroll-snap-align: start;
-    /* Center content within the section */
-    display: flex;
+    height: 100vh; /* Ensure each section takes up the full height of the viewport */
+    scroll-snap-align: start; /* Enable snapping for this element */
+    display: flex;  /* Center content within the section */
     justify-content: center;
     align-items: center;
   }
