--- a/app/_home/styles/Hero.module.css
+++ b/app/_home/styles/Hero.module.css
@@ -28,12 +28,21 @@
   width: 80%;
   text-align: center;
   color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.callerName {
+.callerNameMain {
   font-size: 1.5rem;
   font-weight: bold;
   word-wrap: break-word;
+  margin-bottom: 0.25rem;
+}
+
+.callerNameSub {
+  font-size: 1rem;
+  opacity: 0.8;
 }
 
 .bottomControls {
@@ -127,8 +136,13 @@
     width: 90%;
   }
 
-  .callerName {
+  .callerNameMain {
     font-size: 1.2rem;
+    margin-bottom: 0.15rem;
+  }
+
+  .callerNameSub {
+    font-size: 0.8rem;
   }
 
   .bottomControls {
