open platform button

--- a/app/(styles)/Header.module.css
+++ b/app/(styles)/Header.module.css
@@ -48,3 +48,23 @@
 .navLink:hover {
   font-weight: bold;
 }
+
+.platformButton {
+  background-color: white;
+  color: black;
+  padding: 0.5rem 1.5rem;
+  border-radius: 500px;
+  font-weight: 700;
+  font-size: 0.875rem;
+  transition: transform 0.1s ease;
+  text-decoration: none;
+}
+
+.platformButton:hover {
+  transform: scale(1.04);
+}
+
+.header.hovered .platformButton {
+  background-color: white;
+  color: black;
+}
