--- a/app/(styles)/Header.module.css
+++ b/app/(styles)/Header.module.css
@@ -18,7 +18,7 @@
 }
 
 .logo {
-  font-size: 1.5rem;
+  font-size: 1.35rem;
   font-weight: bold;
   color: var(--gray-text);
   transition: color var(--transition-speed) ease;
@@ -41,6 +41,7 @@
   transition: color var(--transition-speed) ease;
   padding: 0.5rem 0;
   position: relative;
+  font-size: 0.9rem;
 }
 
 .header.hovered .navLink {
@@ -68,7 +69,7 @@
   padding: 0.5rem 1.5rem;
   border-radius: 500px;
   font-weight: 700;
-  font-size: 0.875rem;
+  font-size: 0.9rem;
   transition: transform 0.1s ease;
   text-decoration: none;
   display: inline-flex;
@@ -94,7 +95,7 @@
   border: none;
   cursor: pointer;
   padding: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 0.9rem;
   display: flex;
   align-items: center;
   transition: transform 0.2s ease;
@@ -129,10 +130,15 @@
   cursor: pointer;
   transition: color 0.2s ease;
   text-align: left;
+  font-size: 0.9rem;
 }
 
 .countryOption:hover {
   color: var(--white-text);
+}
+
+.countryOption img {
+  transform: scale(1.15);
 }
 
 /* Mobile menu styles */
@@ -206,10 +212,15 @@
   border-radius: 0.375rem;
   transition: background-color 0.2s;
   color: var(--white-text);
+  font-size: 0.9rem;
 }
 
 .mobileSelectorButton:hover {
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.mobileSelectorButton img {
+  transform: scale(1.15);
 }
 
 .mobileDropdown {
@@ -227,10 +238,15 @@
   padding: 0.75rem;
   transition: background-color 0.2s;
   color: var(--white-text);
+  font-size: 0.9rem;
 }
 
 .mobileCountryOption:hover {
   background-color: rgba(255, 255, 255, 0.1);
+}
+
+.mobileCountryOption img {
+  transform: scale(1.15);
 }
 
 .mobileNavLink {
@@ -238,6 +254,7 @@
   border-radius: 0.375rem;
   transition: background-color 0.2s;
   color: var(--white-text);
+  font-size: 1.08rem;
 }
 
 .mobileNavLink:hover {
@@ -257,6 +274,7 @@
   text-align: center;
   border-radius: 0.375rem;
   transition: background-color 0.2s;
+  font-size: 0.9rem;
 }
 
 .mobilePlatformButton:hover {
